--- a/templates/base.html
+++ b/templates/base.html
@@ -7,14 +7,23 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <style>
+        .bg-tweetme {
+            background-color: #125395 !important;
+        }
+    </style>
 
     <title>TweetMe!  
     {% block head_title %}{% endblock head_title %}    
     </title>
   </head>
   <body>
-        {% block content%}
-        {% endblock content%}
+        {% include "components/navbar.html" %}
+        {% comment %} <div class="container-fluid"> {% endcomment %}
+        <div class="container">
+              {% block content%}
+              {% endblock content%}
+        </div>
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
